# therapanacea-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: models_evaluation.ipynb
src/therapanacea_project/dataset/: classification_dataset.py
src/therapanacea_project/utils/: io.py
tests/: test_training_loop.py  test_validation_loop.py
therapanacea_project/configs/inference/: inference_config copy.yaml  inference_cross_val_config.yaml
therapanacea_project/configs/inference/cross_validation/: inference_resnet18.yaml  inference_resnet34.yaml
therapanacea_project/configs/inference/stratified_split/: inference_resnet18.yaml
therapanacea_project/configs/training/: training_config.yaml  training_cross_validation.yaml
therapanacea_project/dataset/: classification_dataset.py  dataloader.py
therapanacea_project/dataset/transforms/: utils.py
therapanacea_project/evaluate/: eval_cross_validation.py  evaluate.py  evaluate_cross_validation.py  evaluate_stratified_split.py
therapanacea_project/inference/: cross_val_predict.py  predict.py
therapanacea_project/losses/: __init__.py
therapanacea_project/metrics/: __init__.py  false_acceptance_rate.py  false_rejection_rate.py  half_total_error_rate.py  utils.py
therapanacea_project/models/: __init__.py  resnet.py  resnet18.py  vit.py
therapanacea_project/train/: cross_validation_training.py  stratified_split_training.py  training.py  training_loop.py  validation_loop.py
therapanacea_project/train/utils/: training_loop.py  validation_loop.py
therapanacea_project/utils/: files.py  io.py
(+8 files in other folders)
