[tool.ruff]
line-length = 100
# lint, pyflakes, pycodestyle
select = ["F", "E", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 80
profile = 'black'

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.poetry]
name = "therapanacea_project"
version = "1.0.0"
description = "Therapanacea computer vision project."
authors = ["Hippolyte Mayard"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
python-dotenv = "0.20.0"
pandas = "1.4.2"
opencv-python = "4.6.0.66"
pillow = "9.5"
python-multipart = "0.0.5"
omegaconf = "2.2.2"
albumentations = "1.1.0"
pyjwt = "2.6.0"
cryptography = "40.0.1"
torch = "*"
torchvision = "*"
starlette = "0.26.1"
certifi = "*"
transformers = "4.30.2"
python-magic = "0.4.27"
pydicom = "2.4.3"
pylibjpeg = "1.4.0"
pylibjpeg-libjpeg = "1.3.4"
matplotlib = "3.8.2"
seaborn = "0.13.1"
tabulate = "^0.9.0"
black = "^24.3.0"
tensorboard = "^2.16.2"
torchmetrics = "^1.3.2"
jupyterlab = "^4.1.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
matplotlib = "*"
ipdb = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
tensorboard = "*"
scikit-learn = "*"
albumentations = "1.1.0"
black = "<25.0.0"
pre-commit = "2.20.0"
click = "8.1.3"
ipykernel = "^6.20.1"
jupyter = "^1.0.0"
plotly = "^5.11.0"
seaborn = "^0.13.0"
ruff = "0.0.292"
